@@ -13,5 +13,6 @@ extern void dfsch__string_native_register(dfsch_object_t *ctx);
 extern void dfsch__wrapper_native_register(dfsch_object_t *ctx);
 extern void dfsch__weak_native_register(dfsch_object_t *ctx);
 extern void dfsch__format_native_register(dfsch_object_t *ctx);
+extern void dfsch__port_native_register(dfsch_object_t *ctx);
 
 #endif
