@@ -1,5 +1,8 @@
 2007-12-10  Ales Hakl  <ales at hakl dot net>
 
+	* src/dfsch.c (dfsch_new_frame_from_hash): function for constructing
+	environments from pre-existing hash tables (for with-foo forms)
+
 	* src/object.c (native_form_with_slots): with-slots special form
 
 	* src/hash.c (native_form_with_hash): with-hash special form
